<resources>
    <string name="app_name">Doctor</string>
    <string name="str_app_desc">We care your Health</string>

    <string name="str_enter_the_username">Username</string>
    <string name="str_enter_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_username_hint">Username</string>
    <string name="str_Logo">Login</string>
    <string name="str_tittle_network_error">Cannot access internet</string>
    <string name="str_msg_error_state">Check your wi-fi connection. If you are at a work-place or coffee shop, you might
        need to log in to your wi-fi to access the internet
    </string>
    <string name="str_retry">retry</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_progress_loading"><![CDATA[Loading&#8230]]></string>


    <string name="str_loading">Loading…</string>
    <string name="str_no_data_found">No data found</string>
    <string name="str_password">88888888</string>
    <string name="str_username">androidChallenge@vivy.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_doctor_image">doctor_image</string>
    <string name="str_name">Name:</string>
    <string name="str_web">Website:</string>
    <string name="str_address">Address:</string>
    <string name="str_heading_recentdoctor">Recent Doctors</string>
    <string name="str_heading_vivydoctor">Vivy Doctors</string>
    <string name="str_frag_details">fragment_doctor_details</string>
    <string name="str_fragment_list">fragment_doctor_list</string>
    <string name="str_splash">splashFragment</string>
    <string name="str_image">avatarImage</string>


</resources>
