<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_welcome_graph"
    app:startDestination="@id/splashFragment">


    <fragment
        android:id="@+id/splashFragment"
        android:name="com.task.doctor.view.fragment.SplashFragment"
        android:label="@string/str_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_doctorListFragment"
            app:destination="@id/doctorListFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>


    <fragment
        android:id="@+id/doctorListFragment"
        android:name="com.task.doctor.view.fragment.DoctorListFragment"
        android:label="@string/str_fragment_list"
        tools:layout="@layout/fragment_doctor_list">
        <action
            android:id="@+id/action_detail"
            app:destination="@id/doctorDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/doctorDetailsFragment"
        android:name="com.task.doctor.view.fragment.DoctorDetailFragment"
        android:label="@string/str_frag_details"
        tools:layout="@layout/fragment_doctor_detail">

        <argument
            android:name="name"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="string" />

        <argument
            android:name="address"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="string" />

        <argument
            android:name="Image"
            android:defaultValue="@null"
            app:nullable="true"
            app:argType="string" />
    </fragment>
</navigation>