<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="itemDetails"
            type="com.task.doctor.model.Doctor" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/colorBlackAlpha60"
            android:onClick="@{clickListener}">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gL_right_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.99" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gL_image_size_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.29" />


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/str_name"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toEndOf="@+id/gL_image_size_margin"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtView_doctor_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:text="@{itemDetails.name}"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="@id/gL_right_margin"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Dr Med.mario voss" />

            <ImageView
                android:id="@+id/ImgView_doctor_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/str_doctor_image"
                android:scaleType="centerCrop"
                app:image="@{itemDetails.photoId}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="4:4"
                app:layout_constraintEnd_toStartOf="@+id/gL_image_size_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/str_web"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/gL_image_size_margin"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/txtView_doctor_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:text="@{itemDetails.website}"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/gL_right_margin"
                app:layout_constraintStart_toEndOf="@+id/website"
                app:layout_constraintTop_toBottomOf="@+id/txtView_doctor_name"
                tools:text="http://www.vivy-doc.de/" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>