<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackAlpha60">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gL_right_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <ImageView
            android:id="@+id/ImgView_Avatar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/str_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_svg_thumbnail_default_profile_squar"
            app:layout_constraintBottom_toTopOf="@id/gl_centre"
            app:layout_constraintEnd_toEndOf="@id/gL_right_margin"
            app:layout_constraintTop_toTopOf="@id/gl_tittle" />

        <TextView
            android:id="@+id/txtView_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/str_name"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
            app:layout_constraintTop_toBottomOf="@id/gl_centre" />


        <TextView
            android:id="@+id/txtView_doctor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:maxLines="2"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/gL_right_margin"
            app:layout_constraintStart_toEndOf="@+id/txtView_name"
            app:layout_constraintTop_toBottomOf="@id/gl_centre"
             />


        <TextView
            android:id="@+id/txtView_Address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/str_address"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/gl_left_margin"
            app:layout_constraintTop_toBottomOf="@id/txtView_name" />


        <TextView
            android:id="@+id/txtView_Doctor_Address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/gL_right_margin"
            app:layout_constraintStart_toEndOf="@+id/txtView_Address"
            app:layout_constraintTop_toBottomOf="@id/txtView_doctor_name"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>